дарк больного человека

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation "com.github.Anuken.Arc:natives-freetype-desktop:$arcVersion"
     implementation "com.github.Anuken.Mindustry:core:$arcVersion"
 
-    implementation "com.github.fracpete:jclipboardhelper:0.1.2"
+    implementation "javax.activation:activation:1.1.1"
 
     compileOnly "com.github.bsideup.jabel:jabel-javac-plugin:$jabelVersion"
     annotationProcessor "com.github.bsideup.jabel:jabel-javac-plugin:$jabelVersion"
