--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 
     implementation "com.github.Anuken.Arc:natives-desktop:$arcVersion"
     implementation "com.github.Anuken.Arc:natives-freetype-desktop:$arcVersion"
-    implementation "com.github.Anuken.Mindustry:core:$arcVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$arcVersion"
 
     compileOnly "com.github.bsideup.jabel:jabel-javac-plugin:$jabelVersion"
     annotationProcessor "com.github.bsideup.jabel:jabel-javac-plugin:$jabelVersion"
